welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: value =< is not a member of Boolean
  if (90 < Math.abs(n) =< 100 || 190 < Math.abs(n) =< 200) {
                       ^nearHundred:2: error: value =< is not a member of Boolean
  if (90 < Math.abs(n) =< 100 || 190 < Math.abs(n) =< 200) {
                                                   ^